--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -5,6 +5,10 @@
 
 {% block content %}
     <div class="container">
+        <div class="row card text-center m-3">
+            <h2>You searched for "{{query}}"</h2>
+        </div>
+        <hr>
         <div class="row">
             {% for p in product_list %}
             <div class="col">
