--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,10 @@
                 </li>
 
             {% endif %}
-            
+            <li class="nav-item">
+                <a class="nav-link " href="/cart">Cart:</a>
+                <i>{{req.session.cart_items}}</i>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Dropdown
