added product list to view

--- a/templates/cart/home.html
+++ b/templates/cart/home.html
@@ -7,8 +7,25 @@ Contacts
 <div class="container">
     <div class="row">
         <div class="col">            
-            <h3>Cart</h3>        
+            <h3>Cart</h3>   
+            {{cart.id}}            
+            {{cart}}
+            {{request.user}}
         </div>
+    </div>
+    <div class="row">
+        <ul>
+            {% for i in cart.products.all %}
+                <li>
+                    <span>{{i.title}}</span>
+                    <span>{{i.price}}</span>
+                    <a href="/cart/update?product_id={{i.id}}">remove</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="row">
+        Total:{{cart.total}}
     </div>
 </div>
 {% endblock %}
